[gd_scene load_steps=9 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/ScriptTemplates/Entity.gd" type="Script" id=2]
[ext_resource path="res://scripts/ScriptTemplates/EntityStateMachine.gd" type="Script" id=3]
[ext_resource path="res://scripts/ScriptTemplates/EntityProjectileSpawner.gd" type="Script" id=4]
[ext_resource path="res://scripts/ScriptTemplates/EntityRanges.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
resource_local_to_scene = true
radius = 360.0

[sub_resource type="CircleShape2D" id=3]
resource_local_to_scene = true

[node name="Entity" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="Attacks" type="Node" parent="."]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="EntityCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="ProjectileSpawner" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Ranges" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Range" type="Area2D" parent="Ranges"]
collision_layer = 0
collision_mask = 0

[node name="Collision" type="CollisionShape2D" parent="Ranges/Range"]
shape = SubResource( 2 )

[node name="Detection" type="Area2D" parent="Ranges"]

[node name="Collision" type="CollisionShape2D" parent="Ranges/Detection"]
shape = SubResource( 3 )

[connection signal="body_entered" from="Ranges/Range" to="Ranges" method="_on_Range_body_entered"]
[connection signal="body_entered" from="Ranges/Range" to="Ranges/Range" method="_on_Range_body_entered"]
[connection signal="body_exited" from="Ranges/Range" to="Ranges" method="_on_Range_body_exited"]
[connection signal="body_exited" from="Ranges/Range" to="Ranges/Range" method="_on_Range_body_exited"]
[connection signal="body_entered" from="Ranges/Detection" to="Ranges" method="_on_Detection_body_entered"]
[connection signal="body_entered" from="Ranges/Detection" to="Ranges/Detection" method="_on_Detection_body_entered"]
[connection signal="body_exited" from="Ranges/Detection" to="Ranges" method="_on_Detection_body_exited"]
[connection signal="body_exited" from="Ranges/Detection" to="Ranges/Detection" method="_on_Detection_body_exited"]
